bug squashing

--- a/style.css
+++ b/style.css
@@ -4,3 +4,6 @@
     width: 80vw;
     margin: auto;
 }
+#controls {
+    position: relative;
+}
